fix: stabilize Kafka IT by auto-creating topics and waiting for partition assignment